fix property selector overflow

--- a/src/components/PropertySelector/PropertySelector.scss
+++ b/src/components/PropertySelector/PropertySelector.scss
@@ -2,7 +2,8 @@
 
 .container {
   display: flex;
-  flex-wrap: auto;
+  flex-wrap: wrap;
+  overflow: auto;
 }
 
 .property {
